--- a/app/assets/stylesheets/proverb.scss
+++ b/app/assets/stylesheets/proverb.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the proverb controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.container {
+	width: 100%;
+	height: 500px;
+	position: relative;
+	&__main {
+		width: 70%;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		-webkit-transform: translateY(-50%) translateX(-50%);
+  		transform: translateY(-50%) translateX(-50%);
+		&-text {
+			text-align: center;
+		}
+	}
+}
