--- a/app/views/proverb/show.html.slim
+++ b/app/views/proverb/show.html.slim
@@ -2,8 +2,7 @@
 - set_meta_tags keywords: '夏目漱石,名文,名言'
 - set_meta_tags description: 'Sosekiは夏目漱石の名言を毎日ひとつずつ表示するサービスです'
 
-- content_for :header do
-  = render partial: 'layouts/header'
+ = render partial: 'proverb/header'
 
 section.container
 	.container__main
