create header and footer

--- a/app/views/proverb/_header.html.slim
+++ b/app/views/proverb/_header.html.slim
@@ -1,7 +1,3 @@
-header
-	.container
-		.container__top
-			.container__top-logo
-			| soseki
-			.container__top-btn__btn
-			| Your Like List
+header.header
+	.header-item__logo Soseki
+	.header-item__btn__like Your Like List
