--- a/app/assets/stylesheets/proverb.scss
+++ b/app/assets/stylesheets/proverb.scss
@@ -1,6 +1,28 @@
 // Place all the styles related to the proverb controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+body {
+	font-family: "AdobeGaramondW01-Regula", "リュウミン R-KL", "Ryumin Regular KL", "RyuminPro-Regular", "游明朝", "Yu Mincho", "游明朝体", "YuMincho", "ヒラギノ明朝 Pro W3", "Hiragino Mincho Pro", "HiraMinProN-W3", "HGS明朝E", "ＭＳ Ｐ明朝", "MS PMincho", serif;
+}
+
+.header {
+	background-color: #656565;
+	color: #fff;
+	padding: 20px;
+	display: flex;
+	&-item {
+		&__logo {
+			flex-grow: 1;
+		}
+		&__btn {
+			&__like {
+				flex-grow: 1;
+				text-align: right;
+			}
+		}
+	}
+}
+
 .container {
 	width: 100%;
 	height: 500px;
@@ -10,10 +32,24 @@
 		position: absolute;
 		top: 50%;
 		left: 50%;
-		-webkit-transform: translateY(-50%) translateX(-50%);
-  		transform: translateY(-50%) translateX(-50%);
+  	transform: translateY(-50%) translateX(-50%);
 		&-text {
 			text-align: center;
+		}
+	}
+}
+
+.footer {
+	background-color: #656565;
+	color: #fff;
+	padding: 15px;
+	position: fixed;
+ 	bottom: 0;
+  width: 100%;
+	&-item {
+		&__copyright {
+			text-align: center;
+			font-size: 12px;
 		}
 	}
 }
