use font-awesome

--- a/app/views/proverb/_header.html.slim
+++ b/app/views/proverb/_header.html.slim
@@ -1,3 +1,4 @@
 header.header
 	.header-item__logo Soseki
 	.header-item__btn__like Your Like List
+	= fa_icon 'heart', class: "header-item__btn__icon__heart"
