--- a/app/assets/stylesheets/proverb.scss
+++ b/app/assets/stylesheets/proverb.scss
@@ -6,7 +6,7 @@ body {
 }
 
 .header {
-	background-color: #656565;
+	background-color: #666062;
 	color: #fff;
 	padding: 20px;
 	display: flex;
@@ -19,6 +19,10 @@ body {
 				flex-grow: 1;
 				text-align: right;
 			}
+			&__icon__heart {
+				color: #fff0f5;
+				padding-left: 8px;
+			}
 		}
 	}
 }
@@ -28,7 +32,7 @@ body {
 	height: 500px;
 	position: relative;
 	&__main {
-		width: 70%;
+		width: 75%;
 		position: absolute;
 		top: 50%;
 		left: 50%;
