--- a/app/assets/stylesheets/proverb.scss
+++ b/app/assets/stylesheets/proverb.scss
@@ -29,7 +29,7 @@ body {
 
 .container {
 	width: 100%;
-	height: 500px;
+	height: 600px;
 	position: relative;
 	&__main {
 		width: 75%;
@@ -39,6 +39,22 @@ body {
   	transform: translateY(-50%) translateX(-50%);
 		&-text {
 			text-align: center;
+		}
+	}
+	&__bottom {
+		&__inner {
+		display: flex;
+		width: 150px;
+		padding-left: 50px;
+		position: fixed;
+		bottom: 80px;
+		}
+		&-item {
+			padding: 10px;
+			&:hover {
+				color: #ccc0c4;
+				cursor: pointer;
+			}
 		}
 	}
 }
