--- a/app/views/proverb/_sns.html.slim
+++ b/app/views/proverb/_sns.html.slim
@@ -1,6 +1,16 @@
+/ section.container__bottom
+/ 	ul.container__bottom__inner
+/ 		li.container__bottom-item
+/ 			= link_to 'https://twitter.com/share?ref_src=twsrc%5Etfw', class: 'twitter-share-button' do
+/ 				= fa_icon 'twitter', class: 'container__bottom-item__twitter'
+/ 		li.container__bottom-item
+/ 			= link_to 'http://engineer.crowdworks.jp/intern/', class: 'fb-like' do
+/ 				= fa_icon 'facebook', class: 'container__bottom-item__facebook'
+
 section.container__bottom
 	.container__bottom__inner
-		a.container__bottom-item
-		 = fa_icon 'twitter', class: "container__bottom-item__twitter"
-		a.container__bottom-item
-		 = fa_icon 'facebook', class: "container__bottom-item__facebook"
+	  .container__bottom-item
+	    a href='https://twitter.com/share' data-via='soseki' data-count='none'
+	      = fa_icon 'twitter', class: 'container__bottom-item__twitter'
+	    javascript:
+	      !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
