--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,3 +8,13 @@ html
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
     = yield
+
+
+#bs-example-navbar-collapse-1.collapse.navbar-collapse
+  ul.nav.navbar-nav.navbar-right
+    li
+    	= link_to 'Twitterでログイン', '/auth/:provider/callback'
+.container
+  - if flash[:notice]
+  	.alert.alert-success
+    = flash[:notice]
