--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -4,10 +4,7 @@
 main.container
   .container__main
     .container__main-item__text
-      p
-        = @proverb
-      div.container__main-item__btn
-        = fa_icon 'heart', class: "container__main-item__btn__icon__heart"
+      p users#index
 
 == render 'layouts/sns'
 == render 'layouts/footer'
