--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -5,7 +5,7 @@ main.container
   .container__main
     .container__main-item__text
       p
-        = @proverb.todays_proverb
+        = @proverb
     input#user_id name='user_id' type='hidden' value='3'
     == render 'like'
 == render 'layouts/sns'
