--- a/app/views/proverbs/index.html.slim
+++ b/app/views/proverbs/index.html.slim
@@ -4,7 +4,7 @@
 main.container
   .container__main
     .container__main-item__text
-      p proverbs#index
+      = @proverbs
 
 == render 'layouts/sns'
 == render 'layouts/footer'
