--- a/app/assets/stylesheets/proverb.scss
+++ b/app/assets/stylesheets/proverb.scss
@@ -49,6 +49,7 @@ body {
 			}
 			&__btn {
 				padding-top: 20px;
+				text-align: center;
 				&__icon {
 					&__heart {
 						color: $light-pink;
